[project]
name = "ai-testing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "deepagents>=0.4.12",
    "fastmcp>=3.1.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langchain-pymupdf4llm>=0.5.0",
    "langgraph-cli[inmem]>=0.4.19",
    "pillow>=12.1.1",
    "pymupdf4llm>=0.1.9",
]
